# nospacekey

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  index.html
crates/config/: Cargo.toml  build.rs  tauri.conf.json
crates/config/capabilities/: default.json
crates/config/src/: commands.rs  download.rs  logic.rs  main.rs
crates/config/tests/: model_constants_consistency.rs  version_consistency.rs
crates/config/ui/: app.js  index.html  style.css
crates/ids/: Cargo.toml
crates/ids/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  framing.rs  lib.rs  protocol.rs
crates/ipc/tests/: integration.rs  latency.rs
crates/settings/: Cargo.toml
crates/settings/src/: dpapi.rs  keymap.rs  lib.rs
crates/testbench/: Cargo.toml
crates/testbench/src/: doc_state.rs  driver.rs  log_parse.rs  main.rs  report.rs  scenarios.rs  text_store.rs  tsf_host.rs  uielement_sink.rs
crates/tip/: Cargo.toml  build.rs  nospacekey_tip.def
crates/tip/src/: candidate_presenter.rs  candidate_state.rs  candidate_uielement.rs  candidate_window.rs  class_factory.rs  config_launch.rs  conversion_mode.rs  display_attribute.rs  edit_session.rs  engine_link.rs  focus.rs  globals.rs  input_state.rs  key_event_sink.rs  keymap.rs  langbar.rs  langbar_icon.rs  lib.rs  llm_worker.rs  mode_hud.rs  popup.rs  power.rs  reading_monitor.rs  register.rs  text_service.rs  theme.rs
crates/tip/src/render/: mod.rs  renderer.rs
engine-host/: Package.resolved  Package.swift
engine-host/Sources/NospacekeyEngineCore/: BuildInfo.swift  ConversionService.swift  EngineHost.swift  Framing.swift  LLMClient.swift  LLMConfig.swift  LearningSettings.swift  LiveConversionState.swift  Logging.swift  NamedPipeServer.swift  Protocol.swift  TypoRepair.swift  UserDictionary.swift  ZenzaiConfig.swift
engine-host/Sources/NospacekeyEngineHost/: main.swift
engine-host/Tests/NospacekeyEngineCoreTests/: ConversionServiceLearningTests.swift  ConversionServiceReconvertTests.swift  ConversionServiceTests.swift  ConversionServiceTypoTests.swift  EngineHostHandlerTests.swift  FramingTests.swift  LLMClientTests.swift  LLMConfigTests.swift  LearningSettingsTests.swift  LearningSmokeTests.swift  LiveConvertTests.swift  LoggingTests.swift  ProtocolTests.swift  TypoRepairTests.swift  UserDictionaryTests.swift  ZenzaiConfigTests.swift  ZenzaiConversionTests.swift  ZenzaiModeTests.swift
installer/: nospacekey.iss  version.iss
installer/winget/: template.installer.yaml  template.locale.ja-JP.yaml  template.version.yaml
