[package]
name = "ipc"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_RemoteDesktop",   # Spec2: current_session_id (ProcessIdToSessionId)
    "Win32_System_IO",              # A' テスト: ConnectNamedPipe（遅延応答サーバの接続待ち）
] }
