[package]
name = "settings"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
zeroize = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"]
